feat: add redirect feature

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,6 +38,12 @@
             </div>
           </article>
         </div>
+        <a href="/api/redirect" class="button is-dark is-inverted is-size-7 is-inline-block" style="position: absolute; top: 1.25em; right: 1.25em;">
+          <span class="icon">
+            <i class="fas fa-sign-out-alt"></i>
+          </span>
+          <span>Redirect Home</span>
+        </a>
       </div>
     </section>
 
